# gridenv

./: .gitignore  README.md  README_modular_maze.md  maze_dataset.py  play.py  playground.ipynb  pyproject.toml
scripts/: generate_distribution_dataset.py  generate_oracle_dataset.py  render_distribution_trajectories.py  render_trajectories.py  render_trajectories_with_predictions.py
src/gridworld_env/: __init__.py  continual.py  env_distribution.py  environment.py  layout.py  modular_layout.py  modular_maze.py  modular_objects.py  objects.py  oracle_policy.py  procgen.py  rendering.py  replay.py  world_layout.py
src/gridworld_env/layouts/: meister.json  meister.txt  posner.json  posner.txt
tests/: __init__.py  test_continual.py  test_environment.py  test_layout.py  test_objects.py
