[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridworld-env"
version = "0.1.0"
description = "A configurable grid world RL environment with keys, doors, and Posner cueing mode"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["reinforcement-learning", "gridworld", "environment", "gymnasium"]
dependencies = [
    "gymnasium>=0.28.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
render = [
    "pygame>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/user/gridworld-env"
Documentation = "https://github.com/user/gridworld-env#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gridworld_env = ["layouts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
